--- a/jupyterlab.yaml
+++ b/jupyterlab.yaml
@@ -6,5 +6,5 @@ services:
                         - "8888:8888"
                 volumes:
                         - "${BASEDIR}:${BASEDIR}"
-                        - HOME:"${HOME}"
+                        - "${HOME}:${HOME}"
                 command: jupyter lab --port=8888 --allow-root --ip=* --no-browser
